# centinela

./: index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  models.rs  vault.rs  vault_db.rs
src-tauri/src/platform/: mod.rs  windows.rs
src-tauri/src/platform/non_windows/: linux.rs  macos.rs  mod.rs
src/components/: AuthScreen.tsx  ConfirmDangerModal.tsx  CreateCredentialModal.tsx  CreateFolderModal.tsx  CustomClipboardContextMenu.tsx  DashboardFoldersDrawer.tsx  DashboardScreen.tsx  DashboardSearchModal.tsx  EditCredentialModal.tsx  IdleLockWarningModal.tsx  LockVaultModal.tsx  ResetVaultModal.tsx  SecurityModal.tsx
src/hooks/: useIdleSessionLock.ts
src/lib/: centinelaToast.tsx
src/types/: vault.ts
src/utils/: clipboard.ts  folders.ts
